# shoping-agent

./: .gitignore  .replit  pyproject.toml  replit.md
.streamlit/: config.toml
shoppingAgent/: .shopmind_memory.json  .shopmind_watches.json  README.md  app.py  requirements.txt
shoppingAgent/.claude/: settings.local.json
shoppingAgent/__MACOSX/: ._app.py
shoppingAgent/__MACOSX/agents/: .___pycache__
shoppingAgent/agents/: compare.py  controller.py  intent_agent.py  memory.py  planner.py  react_agent.py  recommend.py  reflection.py  search.py  tools_registry.py
shoppingAgent/tools/: product_api.py
shoppingAgent/utils/: __init__.py  cache.py  cart.py  email_sender.py  formatters.py  price_monitor.py  ui_components.py  web_fetcher.py
