[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "beautifulsoup4>=4.14.3",
    "langgraph>=1.1.8",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "serpapi>=1.0.2",
    "streamlit>=1.56.0",
]
